# game-theory-tournament-rust

./: .gitignore  Cargo.toml  README.md
src/: enums.rs  logging.rs  main.rs  main_test.rs  scoreboard.rs  types.rs
src/strategies/: always_cooperate.rs  always_defect.rs  holds_grudge.rs  mod.rs  tit_for_tat.rs  tit_for_two_tats.rs
src/tests/: main_test.rs  mod.rs
