[package]
name = "game-theory-tournament-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
enum-iterator = "1.5.0"
indicatif = "0.17.8"
itertools = "0.12.1"
lazy_static = "1.4.0"


