[package]
name = "gamett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
enum-iterator = "1.5.0"
indicatif = "0.17.8"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
anyhow = "1.0"
thiserror = "1.0.57"

[dev-dependencies]
rstest = "0.18.2"